<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DSActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_desc"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:entries="@array/routine"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="103dp" />
            <Spinner
                android:id="@+id/spinnert1"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:entries="@array/routine2"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="103dp" />

            <EditText
                android:id="@+id/day1"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/days"
                android:inputType="number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/to1"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/from1"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/ch1"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/chunk"
                android:inputType="number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />
            <EditText
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_desc"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:entries="@array/routine"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="103dp" />
            <Spinner
                android:id="@+id/spinnert2"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:entries="@array/routine2"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="103dp" />

            <EditText
                android:id="@+id/day2"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/days"
                android:inputType="number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/to2"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/from2"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/ch2"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/chunk"
                android:inputType="number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/desc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_desc"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:entries="@array/routine"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="103dp" />
            <Spinner
                android:id="@+id/spinnert3"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:entries="@array/routine2"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="103dp" />

            <EditText
                android:id="@+id/day3"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/days"
                android:inputType="number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/to3"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/from3"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/ch3"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/chunk"
                android:inputType="number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/name4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/desc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_desc"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:entries="@array/routine"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="103dp" />
            <Spinner
                android:id="@+id/spinnert4"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:entries="@array/routine2"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="103dp" />

            <EditText
                android:id="@+id/day4"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/days"
                android:inputType="number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/to4"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/from4"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/ch4"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/chunk"
                android:inputType="number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/name5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/desc5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/task_desc"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:entries="@array/routine"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="103dp" />
            <Spinner
                android:id="@+id/spinnert5"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:entries="@array/routine2"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="103dp" />

            <EditText
                android:id="@+id/day5"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/days"
                android:inputType="number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/to5"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/from5"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="time"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/ch5"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/chunk"
                android:inputType="number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="26dp" />


            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSubmit"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>